# unitsys

./: CMakeLists.txt  README.md  appveyor.yml  main.rc  movies.db  resources.qrc
cmake/: FindODB.cmake
src/: DbMovie.cpp  DbMovie.h  Icon.js  MainWindow.qml  MoviesModel.cpp  MoviesModel.h  MoviesModelHelp.h  RatingWidget.qml  UserRatingDialog.qml  main.cpp
tools/generate-mockup-data/: CMakeLists.txt  main.cpp
tools/generate-mockup-data/cmake/: FindSQLite3.cmake
